--- a/client-side/package.json
+++ b/client-side/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.7",
     "flowbite": "^2.5.2",
     "next": "15.1.4",
     "react": "^19.0.0",
