--- a/client-side/package.json
+++ b/client-side/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.64.2",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "date-fns": "^4.1.0",
@@ -21,9 +22,10 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-toastify": "^11.0.2",
-    "uuid": "^11.0.3"
+    "uuid": "^11.0.5"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.64.2",
     "@types/node": "22.10.7",
     "@types/react": "19.0.7",
     "babel-eslint": "^10.1.0",
