--- a/client-side/package.json
+++ b/client-side/package.json
@@ -21,6 +21,7 @@
     "react-date-range": "^2.0.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-select": "^5.9.0",
     "react-toastify": "^11.0.2",
     "uuid": "^11.0.5"
   },
