--- a/client-side/package.json
+++ b/client-side/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
+    "cra-template": "^1.2.0",
     "date-fns": "^4.1.0",
     "flowbite": "^2.5.2",
     "next": "15.1.4",
@@ -20,6 +21,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-toastify": "^11.0.2",
+    "swiper": "^11.2.1",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
