--- a/client-side/package.json
+++ b/client-side/package.json
@@ -12,6 +12,7 @@
     "@tanstack/react-query": "^5.64.2",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
+    "cra-template": "^1.2.0",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "flowbite": "^2.5.2",
@@ -23,6 +24,7 @@
     "react-icons": "^5.4.0",
     "react-select": "^5.9.0",
     "react-toastify": "^11.0.2",
+    "swiper": "^11.2.1",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
