--- a/bun_backend/package.json
+++ b/bun_backend/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@elysiajs/cors": "^1.2.0",
+    "@elysiajs/jwt": "^1.2.0",
     "elysia": "^1.2.25",
     "elysia-helmet": "^2.0.0"
   }
